--- a/client/static/css/style.css
+++ b/client/static/css/style.css
@@ -1,54 +1,33 @@
 * {
-  margin: 0;
   padding: 0;
-}
-
-
-li {
-  list-style: none;
+  margin: 0;
 }
 
 
 #main_wrapper {
-  width: 980px;
+  width: 500px;
   margin: 0 auto;
 }
 
-nav {
-  background-color: #3399FF;
+input, textarea {
+  display: block;
+  width: 340px;
 }
 
-a {
-  text-decoration: none;
 
-}
-
-#back {
-  color: white;
-}
-
-h3 {
-  text-align: center;
-
-}
-
-#enter {
-  border: 3px solid black;
-  height: 200px;
+#add_quote_wrapper {
   width: 350px;
   margin: 0 auto;
 }
 
-input {
-  margin: 10px;
+h3 {
+  text-align: center;
 }
 
-#to_quotes {
-  margin: 0 auto;
-  width: 75px;
-  border: 2px solid black;
+a {
+  text-decoration: none;
+  color: black;
   border-radius: 5px;
-}
-#to {
-  margin-left: 7px;
+  border: 1px solid black;
+  padding: 1px 123px;
 }
